# CNaBro_BE

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  docker_push.py  nginx.conf  pyproject.toml
.github/workflows/: docker-image.yml
alembic/: env.py
api/: .env  database.py  db.py  main.py  migrate_db.py
api/cruds/: task.py
api/domain/langchain/: langchain_model.py
api/domain/note/: note_crud.py  note_router.py  note_schema.py  note_schemas.py
api/domain/user/: user_crud.py  user_login_handler.py  user_router.py  user_routers.py  user_schema.py  user_schemas.py
api/models/: ORM.py  task.py  tasks.py
api/routers/: task.py  tasks.py
api/schemas/: task.py
docker_aws/: Dockerfile  docker-compose.yaml  nginx.conf
docker_aws/api/: db.py  main.py  migrate_db.py
docker_aws/api/cruds/: task.py
docker_aws/api/models/: task.py
docker_aws/api/routers/: task.py
docker_aws/api/schemas/: task.py
docker_aws/old_files/cruds/: task.py
docker_aws/old_files/models/: task.py
docker_aws/old_files/schemas/: task.py
docker_aws/requests/: requests_backend.py
faiss_db/: faiss_index.faiss  faiss_index.pkl
migrations/: env.py
migrations/versions/: 3ba4b02bcfb1_.py  5de04c59a98d_.py  bf71f1b8d36f_.py  c2314f842a4d_.py  c7efc31d1a0e_.py  d793a6e0a024_.py  dc3c0b9ac259_.py  e7e2643de6ef_.py  ee597262aeb3_.py
